// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot when householdSize is an empty string 1`] = `
<div>
  <tr>
    <td>
      $XX,XXX
    </td>
    <td>
      $XX,XXX
    </td>
    <td>
      $XX,XXX
    </td>
  </tr>
</div>
`;

exports[`should match snapshot when householdSize is not empty string 1`] = `
<div>
  <tr>
    <td>
      $100
    </td>
    <td>
      $200
    </td>
    <td>
      $300
    </td>
  </tr>
</div>
`;
